add additional styling

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
   background-image: url ('css/balloons.jpg');
-  font-family: verdana, sans-sans-serif;
+  font-family: courier, sans-sans-serif;
   font-size: 14px;
 };
